# PaperAI

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml  requirements.txt
backend/api/: router.py
backend/api/endpoints/: chat.py  data.py  data_test.py  data_v1.py
backend/db/: database.py  pinecone_client.py  user_files.py
backend/schemas/: chat.py  user_files.py
backend/services/: chat_agent.py  file_service.py  llm_client.py  research_agent.py
backend/services/research/: __init__.py  agents.py  core.py  prompts.py  tools.py  utils.py
backend/settings/: settings.py
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/blog/: page.tsx
frontend/app/chat/: FileCarousel.tsx  page.tsx
frontend/app/components/: ChatInterface.tsx  CtaFooter.tsx  Features.tsx  FileCarousel.tsx  Footer.tsx  HowItWorks.tsx  Navbar.tsx
frontend/app/components/chat/: ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  DeepThinkButton.tsx  FileCarousel.tsx  ResearchPlanMessage.tsx  SelectedFilesBadge.tsx  Sidebar.tsx
frontend/app/components/home/: Cta.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  StatsStrip.tsx
frontend/app/components/ui/: FileListItem.tsx  SendButton.tsx  index.ts
frontend/app/lib/: api.ts  constants.ts
frontend/app/pricing/: page.tsx
frontend/app/services/: api.ts
frontend/app/types/: file.ts
