[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "deepagents>=0.4.7",
    "fastapi[standard]>=0.135.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "pinecone>=8.1.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.1",
    "sqlalchemy>=2.0.48",
    "tavily-python>=0.7.22",
    "transformers>=4.57.6",
]
